# ocaml-cairo

./: .bzrignore  .gitignore  .travis-opam.sh  .travis.yml  CHANGES.md  GPL3.md  INSTALL.txt  Makefile  Makefile.conf  Makefile.ocaml  Makefile.ocaml.in  README.md  README.txt  _oasis  _opam  _tags  appveyor.yml  autogen.sh  cairo2-gtk.descr  cairo2-gtk.opam  cairo2-pango.descr  cairo2-pango.opam  cairo2.descr  cairo2.opam  clean.sh  config.ml  configure.ac  dune-project  index.html  myocamlbuild.ml  setup.ml
.github/workflows/: main.yml
config/: discover.ml  dune  jbuild
doc/: Makefile  index.html  tutorial.css  tutorial.html
doc/_html/: index.html  odoc.css
doc/_html/cairo2-gtk/Cairo_gtk/: index.html
doc/_html/cairo2-pango/: index.html
doc/_html/cairo2-pango/Cairo_pango/: index.html
doc/_html/cairo2/Cairo/: index.html
doc/_html/cairo2/Cairo/Font_face/: index.html
doc/_html/cairo2/Cairo/Font_options/: index.html
doc/_html/cairo2/Cairo/Glyph/: index.html
doc/_html/cairo2/Cairo/Group/: index.html
doc/_html/cairo2/Cairo/Image/: index.html
doc/_html/cairo2/Cairo/Matrix/: index.html
doc/_html/cairo2/Cairo/PDF/: index.html
doc/_html/cairo2/Cairo/PNG/: index.html
doc/_html/cairo2/Cairo/PS/Dsc/: index.html
doc/_html/cairo2/Cairo/Path/: index.html
doc/_html/cairo2/Cairo/Pattern/: index.html
doc/_html/cairo2/Cairo/Recording/: index.html
doc/_html/cairo2/Cairo/Surface/: index.html
doc/cairo2/: index.html
doc/cairo2-gtk/: index.html
doc/cairo2-gtk/Cairo_gtk/: index.html
doc/cairo2-pango/: index.html
doc/cairo2-pango/Cairo_pango/: index.html
doc/cairo2-pango/Cairo_pango/Font_map/: index.html
doc/cairo2/Cairo/: index.html
doc/cairo2/Cairo/Font_face/: index.html
doc/cairo2/Cairo/Font_options/: index.html
doc/cairo2/Cairo/Ft/: index.html
doc/cairo2/Cairo/Ft/Synthesize/: index.html
doc/cairo2/Cairo/Glyph/: index.html
doc/cairo2/Cairo/Group/: index.html
doc/cairo2/Cairo/Image/: index.html
doc/cairo2/Cairo/Matrix/: index.html
doc/cairo2/Cairo/PDF/: index.html
doc/cairo2/Cairo/PNG/: index.html
doc/cairo2/Cairo/PS/: index.html
doc/cairo2/Cairo/PS/Dsc/: index.html
doc/cairo2/Cairo/Path/: index.html
doc/cairo2/Cairo/Pattern/: index.html
doc/cairo2/Cairo/Recording/: index.html
doc/cairo2/Cairo/SVG/: index.html
doc/cairo2/Cairo/Scaled_font/: index.html
doc/cairo2/Cairo/Surface/: index.html
docs/: Makefile  tutorial.html
examples/: Makefile  Makefile.in  arcs.ml  clip.ml  curve_to.ml  dash.ml  diagram.ml  draw.ml  dune  fill.ml  fill_stroke.ml  fill_style.ml  gradient.ml  graphics_demo.ml  gtk_demo.ml  hello.ml  jbuild  mask.ml  paint.ml  path_close.ml  pythagoras_tree.ml  recording.ml  set_line_cap.ml  set_line_join.ml  setsourcegradient.ml  setsourcergba.ml  showtext.ml  stroke.ml  text.ml  text_align_center.ml  text_extents.ml  text_rotate.ml  textextents.ml  tips_ellipse.ml  tips_font.ml  tips_letter.ml
examples-gtk/: dune  gtk_demo.ml  jbuild
examples-pango/: dune  pango_demo.ml  rendering.ml
examples/word_cloud/: Makefile  cloud.ml  cloud.mli  run.ml
gtk/: cairo_gtk.ml  cairo_gtk.mli  cairo_gtk_stubs.c  dune  jbuild
m4/: extra.m4  ocaml.m4
opam/: opam
pango/: cairo_pango_stubs.c  dune
src/: META.in  Makefile  Makefile.in  cairo.ml  cairo.mli  cairo2.mllib  cairo_gtk.mli  cairo_gtk.mllib  cairo_gtk_stubs.c  cairo_macros.c  cairo_macros.h  cairo_ocaml.h  cairo_ocaml.h.p  cairo_ocaml_types.c  cairo_ocaml_types.h  cairo_stubs.c  dune  jbuild  libcairo2.clib  libcairo_gtk.clib
tests/: Makefile  dune  image.ml  image_create.ml  jbuild  matrix_set.ml  surface_gc.ml  test_create.ml  test_exn.ml  test_finish.ml  test_for_stream.ml  test_path.ml
tests-gtk/: alloc.ml  dune
