opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
           "Pierre Hauweele <pierre@hauweele.net>" ]
license: "LGPL-3.0"
homepage: "https://github.com/Chris00/ocaml-cairo"
dev-repo: "git+https://github.com/Chris00/ocaml-cairo.git"
bug-reports: "https://github.com/Chris00/ocaml-cairo/issues"
doc: "https://Chris00.github.io/ocaml-cairo/doc"
tags: ["Cairo" "stroke" "drawing" "tutorial"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.02"}
  "base-bigarray"
  "dune" {>= "2.0.0"}
  "conf-pkg-config" {build}
  "conf-cairo"
  "cairo2" {= version}
  "lablgtk"
]
synopsis: "Rendering Cairo on Gtk2 canvas"
description: """
This provides the link between Cairo and Lablgtk.
"""
