opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
           "Pierre Hauweele <pierre@hauweele.net>" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-cairo"
dev-repo: "https://github.com/Chris00/ocaml-cairo.git"
bug-reports: "https://github.com/Chris00/ocaml-cairo/issues"
doc: "https://Chris00.github.io/ocaml-cairo/doc"
tags: [ "Cairo" "stroke" "drawing" "tutorial"  ]
build: [
  [ "dune" "subst" ] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]
build-test: [
  [ "dune" "runtest" ]
]
build-doc: [ "dune" "build" "@doc" ]
depends: [
  "base-bigarray"
  "dune" {build}
  "conf-cairo"
]
depopts: [
  "conf-freetype"
]
conflicts: [
  "cairo" {= "0.4.1"}
  "cairo" {= "0.4.2"}
]
available: [ ocaml-version >= "4.02" ]

