
(library
 (name        cairo_pango)
 (public_name cairo2-pango)
 (c_names     cairo_pango_stubs)
 (c_flags     :standard (:include c_flags.sexp))
 (c_library_flags :standard (:include c_library_flags.sexp))
 (libraries  threads lablgtk2 cairo2)
 (synopsis "Interface between Cairo and Pango"))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action  (run ../config/discover.exe --gtk)))
