(library
 (name        cairo)
 (public_name cairo2)
 (flags       :standard -w -50); Remove warning 50 for OCaml 4.02.3
 (c_names     cairo_stubs)
 (c_flags     :standard (:include c_flags.sexp))
 (c_library_flags :standard (:include c_library_flags.sexp))
 (install_c_headers cairo_ocaml)
 (libraries   bigarray)
 (synopsis "Binding to Cairo, a 2D Vector Graphics Library"))

(rule
 (targets c_flags.sexp c_library_flags.sexp cairo_ocaml.h)
 (deps    cairo_ocaml.h.p)
 (action  (run ../config/discover.exe)))
